<?xml version="1.0"?>
<package>
  <name>turtlebin</name>
  <version>0.0.1</version>
  <description>The turtlebin package</description>
  <maintainer email="jcerruti@willowgarage.com">Julian Cerruti</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>activity_manager</build_depend>
  <run_depend>activity_manager</run_depend>
</package>
